--- a/src/components/stripe-element-modal/stripe-element-modal.css
+++ b/src/components/stripe-element-modal/stripe-element-modal.css
@@ -17,7 +17,7 @@
   align-items: center;
   justify-content: center;
   gap: 1ch;
-  background: rgba(0,0,0,0.3);
+  background: rgba(0, 0, 0, 0.3);
 }
 :host .modal-child {
   padding: 1.5rem;
