--- a/src/components/stripe-card-element/stripe-card-element.scss
+++ b/src/components/stripe-card-element/stripe-card-element.scss
@@ -8,22 +8,42 @@
 }
 :root {
   --color-label: #565656;
-  --color-placeholder: #adadad;
+  --color-placeholder: #acacac;
   --color-heading-text: #333;
-  --color-input-border: #acacac;
+  --color-input-border: #e4e4e6;
 }
 :host {
   display: block;
+  width: 100%;
   background: #fff;
   padding: 32px 16px;
 }
 //.stripe-payment-wrap {}
 
 .StripeElement {
-  padding: 8px;
+  padding: 8px 16px;
   min-height: 42px;
-  border: 1px solid var(--color-input-border);
+  border-bottom: 1px solid var(--color-input-border);
   border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  > .__PrivateStripeElement {
+    width: 100%;
+  }
+}
+.stripe-input-box {
+  background-color: #fff;
+  border-radius: 2px;
+  filter: drop-shadow(0 0 1px var(--color-input-border));
+}
+.stripe-input-column {
+  .StripeElement {
+    border-right: 1px solid var(--color-input-border);
+    &:last-child {
+      border-right: none;
+    }
+  }
 }
 
 .stripe-heading {
@@ -40,8 +60,4 @@
 }
 .payment-info label {
   color: var(--color-label);
-  margin-bottom: 8px;
-}
-.payment-info fieldset > div {
-  margin-bottom: 8px;
 }
