--- a/src/components/stripe-card-element/stripe-card-element.scss
+++ b/src/components/stripe-card-element/stripe-card-element.scss
@@ -1,22 +1,5 @@
-/* Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property */
-*:where(:not(iframe, canvas, img, svg, video):not(svg *)) {
-  all: unset;
-  display: revert;
-  background: none;
-  border: none;
-  font-family: 'Roboto', suns-serif;
-  box-sizing: border-box;
-}
-:root {
-  --color-label: #565656;
-  --color-placeholder: #acacac;
-  --color-heading-text: #333;
-  --color-input-border: #e4e4e6;
-  --color-button-text: rgba(255, 255, 255, 0.95);
-  --color-button-text-disabled: rgba(255, 255, 255, 0.4);
-  --color-primary: #0074d4;
-}
-
+@import '../../style/rest';
+@import '../../style/theme';
 .stripe-payment-wrap {
   display: block;
   width: 100%;
