chore: add color error Message

--- a/src/components/stripe-card-element/stripe-card-element.scss
+++ b/src/components/stripe-card-element/stripe-card-element.scss
@@ -48,6 +48,11 @@
 .payment-info label {
   color: var(--color-label);
 }
+.stripe-element-errors {
+  margin-top: 8px;
+  font-size: 14px;
+  color: var(--color-text-error);
+}
 button {
   display: block;
   color: var(--color-button-text);
