fix: font-family

--- a/src/style/rest.scss
+++ b/src/style/rest.scss
@@ -4,7 +4,7 @@
   display: revert;
   background: none;
   border: none;
-  font-family: 'Roboto', suns-serif;
+  font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
 }
 button {
