--- a/src/components/stripe-modal/stripe-modal.scss
+++ b/src/components/stripe-modal/stripe-modal.scss
@@ -1,5 +1,7 @@
-@import '../../style/rest';
 @import '../../style/theme';
+@import '../../style/rest';
+
+@include rest;
 
 :host {
   display: block;
