--- a/src/components/stripe-payment-element/stripe-payment-element.scss
+++ b/src/components/stripe-payment-element/stripe-payment-element.scss
@@ -1,6 +1,9 @@
 @import '../../style/theme';
+@import '../../style/rest';
+
 .stripe-payment-sheet-wrap {
-  @import '../../style/rest';
+  @include rest;
+
   display: block;
   width: 100%;
   background: #fff;
