--- a/src/components/stripe-link-authentication-element/stripe-link-authentication-element.scss
+++ b/src/components/stripe-link-authentication-element/stripe-link-authentication-element.scss
@@ -1,8 +1,8 @@
-@import '../../style/theme';
-@import '../../style/rest';
+@use '../../style/theme';
+@use '../../style/rest';
 
 .stripe-link-authentication-wrap {
-  @include rest;
+  @include rest.rest;
 
   display: block;
   width: 100%;
