fix(style): apply box-sizing host-self

--- a/src/components/stripe-address-element/stripe-address-element.scss
+++ b/src/components/stripe-address-element/stripe-address-element.scss
@@ -3,7 +3,9 @@
 
 .stripe-payment-sheet-wrap {
   @include rest.rest;
+
   display: block;
+  box-sizing: border-box;
   width: 100%;
   background: #fff;
   padding: 32px 16px;
