fix(sass): deny global reset

--- a/src/components/stripe-currency-selector/stripe-currency-selector.scss
+++ b/src/components/stripe-currency-selector/stripe-currency-selector.scss
@@ -1,10 +1,11 @@
 @use '../../style/rest.scss';
 @use '../../style/theme.scss';
 
-@include rest.rest;
+:host {
+  @include rest.rest;
 
-stripe-currency-selector {
   display: block;
+  box-sizing: border-box;
   width: 100%;
 }
 
