--- a/src/components/stripe-modal/stripe-modal.scss
+++ b/src/components/stripe-modal/stripe-modal.scss
@@ -1,10 +1,10 @@
 @use '../../style/theme';
 @use '../../style/rest';
 
-@include rest.rest;
-
 :host {
+  @include rest.rest;
   display: block;
+  box-sizing: border-box;
 }
 
 .modal-row {
