chore(): update input shadow color

--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -4,6 +4,7 @@
   --color-heading-text: #333;
   --color-text-error: #ef4444;
   --color-input-border: #e4e4e6;
+  --color-input-border-shadow: rgba(228, 228, 230, 0.6);
   --color-button-text: rgba(255, 255, 255, 0.95);
   --color-button-text-disabled: rgba(255, 255, 255, 0.4);
   --color-primary: #0074d4;
