--- a/src/components/stripe-card-element/stripe-card-element.scss
+++ b/src/components/stripe-card-element/stripe-card-element.scss
@@ -23,7 +23,7 @@
     border-radius: 6px;
     border: 1px solid var(--color-input-border);
     overflow: hidden;
-    filter: drop-shadow(0 0 2px var(--color-input-border));
+    filter: drop-shadow(0 0 2px var(--color-input-border-shadow));
 
     & > * {
       border-bottom: 1px solid var(--color-input-border);
