--- a/src/components/stripe-modal/stripe-modal.scss
+++ b/src/components/stripe-modal/stripe-modal.scss
@@ -7,10 +7,15 @@
 }
 
 .modal-row {
-  display: none;
+  opacity: 0;
+  pointer-events: none;
+  will-change: transform;
 }
 
 .modal-row.open {
+  opacity: 1;
+  pointer-events: auto;
+
   position: fixed;
   top: 0;
   left: 0;
@@ -23,6 +28,44 @@
   gap: 1ch;
   background: rgba(0, 0, 0, 0.3);
 }
+
+.modal-row {
+  .modal-child {
+    min-height: 574px;
+    transform: translateY(100%);
+    transition: transform 420ms ease;
+    position: relative;
+
+    .modal-loading {
+      display: none;
+      position: absolute;
+      top: 160px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 24px;
+      height: 24px;
+    }
+    &.loading .modal-loading {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      svg {
+        width: 24px;
+        height: 24px;
+      }
+    }
+
+    &.loading .modal-content {
+      visibility: hidden;
+    }
+  }
+
+  &.open .modal-child {
+    transform: translateY(0%);
+  }
+}
+
 .modal-child {
   padding: 1.5rem;
   background-color: #fff;
