--- a/src/components/stripe-modal/stripe-modal.scss
+++ b/src/components/stripe-modal/stripe-modal.scss
@@ -31,7 +31,6 @@
 
 .modal-row {
   .modal-child {
-    min-height: 574px;
     transform: translateY(100%);
     transition: transform 420ms ease;
     position: relative;
@@ -67,7 +66,7 @@
 }
 
 .modal-child {
-  padding: 1.5rem;
+  padding: 16px 8px 24px;
   background-color: #fff;
   width: 100%;
 }
